--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:BackupMonitor"
-        Title="Backup Monitor" Height="637" Width="1279"
+        Title="Backup Monitor" Height="637" Width="1297"
         WindowStartupLocation="CenterScreen" FontSize="18">
     <Grid Margin="12">
         <Grid.RowDefinitions>
@@ -16,21 +16,23 @@
             <StackPanel Orientation="Horizontal" Margin="0,0,0,5">
                 <Button Name="BtnCheckToday" Content="Проверить сегодня" Width="170" Height="34" Margin="10,0,20,0" Click="BtnCheckToday_Click"/>
                 <Button Name="BtnCheckPeriod" Content="Проверить период" Width="170" Height="34" Margin="0,0,20,0" Click="BtnCheckPeriod_Click"/>
-                <Button Name="BtnAddService" Content="Добавить сервис" Width="150" Height="32" Margin="0,0,10,0" Click="BtnAddService_Click"/>
-                <Button Name="BtnAddGroup" Content="???????? ??????" Width="160" Height="32" Margin="0,0,20,0" Click="BtnAddGroup_Click"/>
+                <Button Name="BtnAddService" Content="Добавить сервис" Width="150" Height="32" Margin="0,0,20,0" Click="BtnAddService_Click"/>
+                <Button Name="BtnAddGroup" Content="Добавить множество сервисов" Width="292" Height="32" Margin="0,0,20,0" Click="BtnAddGroup_Click"/>
                 <Button Name="BtnEditService" Content="Редактировать сервис" Width="196" Height="32" Margin="0,0,20,0" Click="BtnEditService_Click"/>
                 <Button Name="BtnDeleteService" Content="Удалить сервис" Width="150" Height="32" Margin="0,0,20,0" Click="BtnDeleteService_Click"/>
-                <Button Name="BtnTelegramSettings" Content="Telegram" Width="120" Height="32" Margin="0,0,20,0" Click="BtnTelegramSettings_Click"/>
-                <Button Name="BtnSendReport" Content="Отправить отчет" Width="150" Height="32" Click="BtnSendReport_Click"/>
+                
+                
             </StackPanel>
             <!-- Управление Windows Service -->
             <StackPanel Orientation="Horizontal" Margin="70,0,0,0">
                 <TextBlock Text="Служба:" VerticalAlignment="Center" Margin="0,0,10,0"/>
                 <TextBlock Name="ServiceStatusText" Text="Не установлена" VerticalAlignment="Center" Margin="0,0,10,0" FontWeight="Bold"/>
-                <Button Name="BtnInstallService" Content="Установить службу" Width="140" Height="30" Margin="0,0,5,0" Click="BtnInstallService_Click"/>
-                <Button Name="BtnStartService" Content="Запустить" Width="100" Height="30" Margin="0,0,5,0" Click="BtnStartService_Click"/>
-                <Button Name="BtnStopService" Content="Остановить" Width="100" Height="30" Margin="0,0,5,0" Click="BtnStopService_Click"/>
-                <Button Name="BtnRefreshServiceStatus" Content="Обновить статус" Width="172" Height="30" Click="BtnRefreshServiceStatus_Click"/>
+                <Button Name="BtnInstallService" Content="Установить службу" Width="165" Height="30" Margin="0,0,10,0" Click="BtnInstallService_Click"/>
+                <Button Name="BtnStartService" Content="Запустить" Width="100" Height="30" Margin="0,0,10,0" Click="BtnStartService_Click"/>
+                <Button Name="BtnStopService" Content="Остановить" Width="100" Height="30" Margin="0,0,10,0" Click="BtnStopService_Click"/>
+                <Button Name="BtnRefreshServiceStatus" Content="Обновить статус" Width="172" Height="30" Margin="0,0,10,0" Click="BtnRefreshServiceStatus_Click"/>
+                <Button Name="BtnTelegramSettings" Content="Telegram" Width="120" Height="32" Margin="0,0,10,0" Click="BtnTelegramSettings_Click"/>
+                <Button Name="BtnSendReport" Content="Отправить отчет" Width="150" Height="32" Click="BtnSendReport_Click"/>
             </StackPanel>
         </StackPanel>
 
